--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -209,12 +209,13 @@
     }
   }
 
-  &__cabinet {
+  &__user {
     padding: 10px 0 10px 20px;
     font-size: 14px;
     line-height: 17px;
     color: $text-color-brightness-50;
     border-left: 1px solid rgba(31, 32, 65, 0.1);
+    text-decoration: none;
 
     @media (max-width: $phone-width) {
       font-size: 12px;
