--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -4,8 +4,8 @@ block head
   meta(name="description" content="Отель, поиск номеров")
   meta(name="keywords" content="отель, поиск номеров, отдых, комнаты")
 block content
-  main.index
-    ul(class="index__list")
+  main.main
+    ul.index__list
       li.index__list-item
         a(href="/form-elements.html").index__link form-elements
       li.index__list-item
