--- a/src/components/card-sign-in/card-sign-in.pug
+++ b/src/components/card-sign-in/card-sign-in.pug
@@ -1,4 +1,5 @@
 include ~components/text-field/text-field
+include ~components/button/button
 
 mixin card-sign-in()
   .card-sign-in
@@ -28,8 +29,17 @@ mixin card-sign-in()
             }
           )
         .card-sign-in__button
-          button(type="submit").button.button_big.button_with-icon Войти
+          +button({
+            type: 'submit',
+            modifiers: 'button_big button_with-icon',
+            text: 'Войти'
+          })
         .card-sign-in__check-in 
           span.card-sign-in__check-in-text
             | Нет аккаунта на Toxin?
-          a(href="registration.html").button.button_white Создать
+          +button({
+            type: 'link',
+            href: 'registration.html',
+            modifiers: 'button_white',
+            text: 'Создать'
+          })
