--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -11,6 +11,7 @@
   background-image: url('./images/landing-page-bg.jpg');
   background-repeat: no-repeat;
   background-position: center;
+  flex: 1 0 auto;
 
   @media (min-width: $sm-desktop-width) {
     background-size: cover;
