--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -9,7 +9,7 @@
   background-position: center;
   background-origin: content-box;
   background-size: cover;
-
+  flex: 1 0 auto;
   &__container {
     @include container;
   }
