--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -4,16 +4,11 @@ include ~components/logo/logo
 mixin header( user = null )
   -
     const routes = [
-      { text: 'О нас', active: false, href: '/mock-address/change-me' },
-      { text: 'Услуги', active: false, href: '/mock-address/change-me', dropdown: true },
-      { text: 'Вакансии', active: false, href: '/mock-address/change-me' },
-      { text: 'Новости', active: false, href: '/mock-address/change-me' },
-      {
-        text: 'Соглашения',
-        active: false,
-        href: '/mock-address/change-me',
-        dropdown: true,
-      },
+      { text: 'О нас', active: false },
+      { text: 'Услуги', active: false, dropdown: true },
+      { text: 'Вакансии', active: false },
+      { text: 'Новости', active: false },
+      { text: 'Соглашения', active: false, dropdown: true},
     ]
 
   header.header.js-header
